// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodePane Test addExample(...) render HTML & CSS snippets correctly when we call "showCode()" 1`] = `
<div
  class="codepane"
  id="codepane"
>
  <div
    class="codepane__example actived"
    data-key="flexbox"
  >
    
                
    <div
      class="codepane__code actived"
    >
      
                    
      <div
        class="codepane__html"
        style="flex-basis: calc(50% - 2.5px);"
      >
        
                        
        <pre>
          <code>
            &lt;div class="flexbox"&gt;
    &lt;div class="flexbox-inner"&gt;hello, world&lt;/div&gt;
&lt;/div&gt;
          </code>
        </pre>
        
                    
      </div>
      
                    
      <div
        class="gutter gutter-horizontal"
        style="flex-basis: 5px;"
      />
      <div
        class="codepane__css"
        style="flex-basis: calc(50% - 2.5px);"
      >
        
                        
        <pre>
          <code>
            .flexbox {
    display: flex;
}
.flexbox-inner {
    flex-basis: 200px;
}
          </code>
        </pre>
        
                    
      </div>
      
                
    </div>
    
                
    <div
      class="codepane__result"
    >
      
                    
            
      <div
        class="flexbox"
      >
        
                
        <div
          class="flexbox-inner"
        >
          hello, world
        </div>
        
            
      </div>
      
        
                
    </div>
    
            
  </div>
</div>
`;

exports[`CodePane Test addExample(...) render result correctly when we call "showResult()" 1`] = `
<div
  class="codepane"
  id="codepane"
>
  <div
    class="codepane__example actived"
    data-key="flexbox"
  >
    
                
    <div
      class="codepane__code"
    >
      
                    
      <div
        class="codepane__html"
        style="flex-basis: calc(50% - 2.5px);"
      >
        
                        
        <pre>
          <code>
            &lt;div class="flexbox"&gt;
    &lt;div class="flexbox-inner"&gt;hello, world&lt;/div&gt;
&lt;/div&gt;
          </code>
        </pre>
        
                    
      </div>
      
                    
      <div
        class="gutter gutter-horizontal"
        style="flex-basis: 5px;"
      />
      <div
        class="codepane__css"
        style="flex-basis: calc(50% - 2.5px);"
      >
        
                        
        <pre>
          <code>
            .flexbox {
    display: flex;
}
.flexbox-inner {
    flex-basis: 200px;
}
          </code>
        </pre>
        
                    
      </div>
      
                
    </div>
    
                
    <div
      class="codepane__result actived"
    >
      
                    
            
      <div
        class="flexbox"
      >
        
                
        <div
          class="flexbox-inner"
        >
          hello, world
        </div>
        
            
      </div>
      
        
                
    </div>
    
            
  </div>
</div>
`;
